--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@prisma/client": "^3.9.2",
