--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@prisma/client": "^3.9.2",
+    "@types/bcrypt": "^5.0.0",
     "prisma": "^3.9.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
