--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@prisma/client": "^3.9.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "prisma": "^3.9.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
