--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@prisma/client": "^3.9.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.8",
     "prisma": "^3.9.2",
     "ts-node-dev": "^1.1.8",
